--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
             <p id="wins-text">wins-text</p>
             <p id="numberofgames-text">remaining-text</p>
 
-            <audio id="audiocon" src="assets/images/Happy.mp3" controls>
+            <!-- <audio id="audiocon" src="assets/images/Happy.mp3"  preload="auto" controls>
                 <p>Music</p>
-            </audio>
+            </audio> -->
+            <embed 
+            src="assets/images/Happy.mp3"
+            loop="false"
+            autostart="false"
+            hidden="true"
+            mastersound>
+
         </section>
     </div>
 
