--- a/hangman.html
+++ b/hangman.html
@@ -16,7 +16,7 @@
 
     <header id="masthead">
         <div class="container">
-            <h1>Let's do HANGMAN!</h1>
+            <h1>Guess what letter I'm thinking of</h1>
         </div>
     </header>
 
