add moving text

--- a/hangman.html
+++ b/hangman.html
@@ -16,20 +16,20 @@
 
     <header id="masthead">
         <div class="container">
-            <h1>Guess what letter I'm thinking of</h1>
+            <h1 id="bigtitle">Guess what letter I'm thinking of</h1>
         </div>
     </header>
 
     <div id="main-container" class="container">
         <section class="main-section">
-            <p id="directions-text">Press any alphabet key for guessing</p>
+            <h4 id="directions-text">Press any alphabet key for guessing</h4>
             <img id="hangmanimg" src="assets/images/hangman_bg.jfif">
             
-            <p id="userchoice-text"></p>
-            <p id="letteralready-text">letteralready-text</p>
-            <p id="remaining-text">remaining-text</p>
-            <p id="wins-text">wins-text</p>
-            <p id="numberofgames-text">remaining-text</p>
+            <h4 id="userchoice-text"></h4>
+            <h4 id="letteralready-text">letteralready-text</h4>
+            <h4 id="remaining-text">remaining-text</h4>
+            <h4 id="wins-text">wins-text</h4>
+            <h4 id="numberofgames-text">remaining-text</h4>
 
             <!-- <audio id="audiocon" src="assets/images/Happy.mp3"  preload="auto" controls>
                 <p>Music</p>
