--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id="masthead">
         <div class="container">
-            <h1>Guess what letter I'm thinking of</h1>
+            <h1 id="bigtitle">Guess what letter I'm thinking of</h1>
         </div>
     </header>
 
